USE TechStop;
GO

CREATE TABLE dbo.Supplier (
	Id INT IDENTITY(1,1) PRIMARY KEY,
	SupplierName VARCHAR(255) NOT NULL,
	Phone VARCHAR(20),
	Email VARCHAR(255),
	URL VARCHAR(255)
);
GO

CREATE TABLE dbo.Product (
	Id INT IDENTITY(1,1) PRIMARY KEY,
	ProductName VARCHAR(255) NOT NULL,
	Description VARCHAR(MAX),
	Price DECIMAL(10,2) NOT NULL,
	QuantityInStock INT NOT NULL DEFAULT(0),
	SupplierId INT NULL
		CONSTRAINT FK_Product_Supplier
		REFERENCES dbo.Supplier(Id)
);
GO

CREATE TABLE dbo.Customer (
	Id INT IDENTITY(1,1) PRIMARY KEY,
	FirstName VARCHAR(255) NOT NULL,
	LastName VARCHAR(255) NOT NULL,
	Phone VARCHAR(20) NOT NULL,
	Email VARCHAR(255) NOT NULL,
	CreatedAt DATETIME2 NOT NULL,
	UpdatedAt DATETIME2 NULL,
	IsActive BIT NOT NULL DEFAULT(1), 
);
GO

CREATE TABLE dbo.Employee (
	Id INT IDENTITY(1,1) PRIMARY KEY,
	FirstName VARCHAR(255) NOT NULL,
	LastName VARCHAR(255) NOT NULL,
	Phone VARCHAR(20) NOT NULL,
	Email VARCHAR(255) NOT NULL,
	CreatedAt DATETIME2 NOT NULL,
	UpdatedAt DATETIME2 NULL,
	IsActive BIT NOT NULL DEFAULT(1), 
);
GO

CREATE TABLE dbo.CustomerOrder (
	Id INT IDENTITY(1,1) PRIMARY KEY,
	CustomerId INT NOT NULL
		CONSTRAINT FK_Order_Customer
		REFERENCES dbo.Employee(Id),
	EmployeeId INT NOT NULL
		CONSTRAINT FK_Order_Employee
		REFERENCES dbo.Employee(Id),
	OrderDate DATETIME2 NULL,
	Status VARCHAR(20) NULL,

	Subtotal DECIMAL(10,2) NOT NULL DEFAULT(0),
	DiscountAmount DECIMAL(10,2) NOT NULL DEFAULT(0),
	Tax DECIMAL(10,2) NOT NULL DEFAULT(0),
	Total DECIMAL(10,2) NOT NULL DEFAULT(0)
);
GO

CREATE TABLE dbo.OrderItem (
	Id INT IDENTITY(1,1) PRIMARY KEY,
	OrderId INT NOT NULL
		CONSTRAINT FK_OrderItem_Order
		REFERENCES dbo.CustomerOrder(Id),
	ProductId INT NOT NULL
		CONSTRAINT FK_OrderItem_Product
		REFERENCES dbo.Product(Id),
	Quantity INT NOT NULL DEFAULT(1),
	UnitPrice DECIMAL(10,2) NOT NULL,
	Discount DECIMAL(10,2) NULL DEFAULT(0)
);
GO